--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -916,7 +916,7 @@
                 </tr>
             </table>
         }
-        else if (lType >= 63 && lType < 65)
+        else if (lType == 63)
         {
             <!-- 北京赛车 -->
             <table width="100%" border="1" bordercolor="#999" class="WanFa_TableA">
@@ -997,6 +997,90 @@
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="pk10_q10">单</td>
                     <td align="center" valign="middle"><a href="javascript:openModule('pk10_q10','popup_1_10_dan_da','pk10');" data-id="pk10_q10" data-type="popup_1_10_dan_da" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+            </table>
+        }
+        else if (lType == 64)
+        {
+            <!-- 幸运飞艇 -->
+            <table width="100%" border="1" bordercolor="#999" class="WanFa_TableA">
+                <tr>
+                    <td width="18%" align="center" valign="middle">
+                        <h3 class="WF_Ttitle">冠军</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q1">单</td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('xyft_q1','popup_dan_da_lh','xyft');" data-id="xyft_q1" data-type="popup_dan_da_lh" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">亚军</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q2">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q2','popup_dan_da_lh','xyft');" data-id="xyft_q2" data-type="popup_dan_da_lh" class="WF_Btn " style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第三名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q3">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q3','popup_dan_da_lh','xyft');" data-id="xyft_q3" data-type="popup_dan_da_lh" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第四名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q4">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q4','popup_dan_da_lh','xyft');" data-id="xyft_q4" data-type="popup_dan_da_lh" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第五名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q5">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q5','popup_dan_da_lh','xyft');" data-id="xyft_q5" data-type="popup_dan_da_lh" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第六名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q6">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q6','popup_1_10_dan_da','xyft');" data-id="xyft_q6" data-type="popup_1_10_dan_da" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第七名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q7">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q7','popup_1_10_dan_da','xyft');" data-id="xyft_q7" data-type="popup_1_10_dan_da" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第八名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q8">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q8','popup_1_10_dan_da','xyft');" data-id="xyft_q8" data-type="popup_1_10_dan_da" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第九名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q9">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q9','popup_1_10_dan_da','xyft');" data-id="xyft_q9" data-type="popup_1_10_dan_da" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
+                </tr>
+
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">第十名</h3>
+                    </td>
+                    <td align="center" valign="middle" class="betContainer" id="xyft_q10">单</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xyft_q10','popup_1_10_dan_da','xyft');" data-id="xyft_q10" data-type="popup_1_10_dan_da" class="WF_Btn" style="padding:20px 0;">选择号码</a></td>
                 </tr>
             </table>
         }
