添加排行榜

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li>
-                <a href="榜-排行榜.html">
+                <a href="/List/Index">
                     <i><img src="/images/grids_icon_04.png"></i>
                     <p>排行</p>
                 </a>
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a href="榜-高手榜.html">
+                <a href="List/Expert">
                     <i><img src="/images/grids_icon_06.png"></i>
                     <p>高手</p>
                 </a>
