--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
@@ -144,7 +144,7 @@
                     </li>
 
                     <li>
-                        <p class="DL_icon4 f-l"></p>
+                        <p class="DL_icon DL_icon4 f-l"></p>
                         <div class="UL_kuai1">
                             <input type="text" id="name" placeholder="输入昵称" class="DL_ipt1">
                         </div>
