--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -1627,12 +1627,7 @@ a {
             background-position: 0 -48px;
         }
          .DL_if1UL li .DL_icon4 {
-            height: 16px;
-            width: 16px;
-            background: url(../images/13_1.png);
-        
-            margin-top: 12px;
-            background-repeat:no-repeat;
+            background-position: 0 -67px;
         }
 
         .DL_if1UL li .UL_kuai1 {
