--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
@@ -81,7 +81,7 @@
                         }
                     }
                 }
-                <div style="clear:bothl;"></div>
+                <div style="clear:both;"></div>
             </ul>
         </div>
     </div>
