--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Public/Tan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Public/Tan.cshtml
@@ -800,15 +800,15 @@
             </dt>
                     <dd>
                         <span class="numContainer">
-                        <span class="C8_Qiu C8_Qiu_1">1</span>
-                        <span class="C8_Qiu C8_Qiu_2">2</span>
-                        <span class="C8_Qiu C8_Qiu_3">3</span>
-                        <span class="C8_Qiu C8_Qiu_4">4</span>
-                        <span class="C8_Qiu C8_Qiu_5">5</span>
-                        <span class="C8_Qiu C8_Qiu_6">6</span>
-                        <span class="C8_Qiu C8_Qiu_7">7</span>
-                        <span class="C8_Qiu C8_Qiu_8">8</span>
-                        <span class="C8_Qiu C8_Qiu_9">9</span>
+                        <span class="C8_Qiu C8_Qiu_1">01</span>
+                        <span class="C8_Qiu C8_Qiu_2">02</span>
+                        <span class="C8_Qiu C8_Qiu_3">03</span>
+                        <span class="C8_Qiu C8_Qiu_4">04</span>
+                        <span class="C8_Qiu C8_Qiu_5">05</span>
+                        <span class="C8_Qiu C8_Qiu_6">06</span>
+                        <span class="C8_Qiu C8_Qiu_7">07</span>
+                        <span class="C8_Qiu C8_Qiu_8">08</span>
+                        <span class="C8_Qiu C8_Qiu_9">09</span>
                         <span class="C8_Qiu C8_Qiu_10">10</span>
                         <span class="C8_Qiu C8_Qiu_11">11</span>
                         </span>
@@ -1109,7 +1109,7 @@
         </div>
 
 
-        <!--弹窗 选择号码 11个号码 1-11 、单、大-->
+        <!--弹窗 选择号码 12个号码 1-12 、单、大-->
         <div id="popup_12_dan_da" class="C8_TCpopupA" style="margin-top:-117px; display:none;">
             <div class="C8_Ttitle">
                 <h3>请选择玩法</h3>
@@ -1123,18 +1123,18 @@
             </dt>
                     <dd>
                         <span class="numContainer">
-                        <span class="C8_Qiu C8_Qiu_1">1</span>
-                        <span class="C8_Qiu C8_Qiu_2">2</span>
-                        <span class="C8_Qiu C8_Qiu_3">3</span>
-                        <span class="C8_Qiu C8_Qiu_4">4</span>
-                        <span class="C8_Qiu C8_Qiu_5">5</span>
-                        <span class="C8_Qiu C8_Qiu_6">6</span>
-                        <span class="C8_Qiu C8_Qiu_7">7</span>
-                        <span class="C8_Qiu C8_Qiu_8">8</span>
-                        <span class="C8_Qiu C8_Qiu_9">9</span>
-                        <span class="C8_Qiu C8_Qiu_10">10</span>
-                        <span class="C8_Qiu C8_Qiu_11">11</span>
-                        <span class="C8_Qiu C8_Qiu_11">12</span>
+                        <span class="C8_Qiu">01</span>
+                        <span class="C8_Qiu">02</span>
+                        <span class="C8_Qiu">03</span>
+                        <span class="C8_Qiu">04</span>
+                        <span class="C8_Qiu">05</span>
+                        <span class="C8_Qiu">06</span>
+                        <span class="C8_Qiu">07</span>
+                        <span class="C8_Qiu">08</span>
+                        <span class="C8_Qiu">09</span>
+                        <span class="C8_Qiu">10</span>
+                        <span class="C8_Qiu">11</span>
+                        <span class="C8_Qiu">12</span>
                         </span>
                         <div style="clear:both;"></div>
                     </dd>
