--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
@@ -67,7 +67,7 @@
     </div>
 
     <div class="details_box" style="margin-top: 100px;">
-        <input type="hidden" id="userid" value="@ViewBag.UserId??0" />
+        <input type="hidden" id="userid" value="@(ViewBag.UserId??0)" />
         <div class="details_info1 mescroll" id="mescroll0">
             <div id="datalist0" class="data-list">
 
