--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a href="List/Expert">
+                <a href="/List/Expert">
                     <i><img src="/images/grids_icon_06.png"></i>
                     <p>高手</p>
                 </a>
