--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
@@ -1,6 +1,11 @@
-﻿@{
+﻿@using C8.Lottery.Model
+@{
     Layout = null;
+    List<LotteryType2> typeList = ViewBag.TypeList;
+    IEnumerable<IGrouping<int, LotteryType2>> lotteryList = ViewBag.LotteryList;
 }
+
+@model LotteryType2
 
 <!DOCTYPE html>
 
@@ -10,6 +15,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>高手榜</title>
+
+    <link rel="stylesheet" type="text/css" href="/css/mescroll.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
@@ -27,13 +34,21 @@
         <div class="hdNav_cai_collect">
             <div class="hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
             <ul class="hdNav_cai_lhs">
-                <li class="current"><a href="javascript:;">热门</a></li>
-                <li><a href="javascript:;">快三</a></li>
-                <li><a href="javascript:;">11选5</a></li>
-                <li><a href="javascript:;">时时彩</a></li>
-                <li><a href="javascript:;">赛车</a></li>
-                <li><a href="javascript:;">快乐十分</a></li>
-                <li><a href="javascript:;">其他</a></li>
+                @if (typeList != null)
+                {
+                    foreach (var item in typeList)
+                    {
+                        if (item.Id == Model.PId)
+                        {
+                            <li data-id="@("group"+item.Id)" class="current"><a href="javascript:;">@item.Name</a></li>
+                        }
+                        else
+                        {
+                            <li data-id="@("group"+item.Id)"><a href="javascript:;">@item.Name</a></li>
+
+                        }
+                    }
+                }
             </ul>
             <div style="clear:both;"></div>
         </div>
@@ -43,59 +58,57 @@
                 <span class="collect"><img src="/images/icon-collect.png" alt="" /></span>
             </div>
             <ul class="hdNav_cai">
-                <li class="current"><a href="javascript:;">热门</a></li>
-                <li><a href="javascript:;">快三</a></li>
-                <li><a href="javascript:;">11选5</a></li>
-                <li><a href="javascript:;">时时彩</a></li>
-                <li><a href="javascript:;">赛车</a></li>
-                <li><a href="javascript:;">快乐十分</a></li>
-                <li><a href="javascript:;">其他</a></li>
+                @if (typeList != null)
+                {
+                    foreach (var item in typeList)
+                    {
+                        if (item.Id == Model.PId)
+                        {
+                            <li data-id="@("group"+item.Id)" class="current"><a href="javascript:;">@item.Name</a></li>
+                        }
+                        else
+                        {
+                            <li data-id="@("group"+item.Id)"><a href="javascript:;">@item.Name</a></li>
+
+                        }
+                    }
+                }
             </ul>
             <div style="clear:both;"></div>
         </div>
     </div>
+    
+    <div class="gaoshou">
+        <div class="GS_box" style="display: block;">
 
-    <!-- <div class="guessing_header">
-        <ul class="C8_nav4 C8_GPQG">
-            <li class="current"><a href="javascript:;">高频彩</a></li>
-            <li><a href="javascript:;">全国彩</a></li>
-            <div style="clear:both;"></div>
-        </ul>
-    </div> -->
+            @if (lotteryList.Any())
+            {
+                foreach (var goupList in lotteryList)
+                {
+                    string showMode = goupList.Key == Model.Id ? "display:block;" : "display:none;";
+                    <ul id="@("group"+goupList.Key)" class="GS_nav" style="@showMode">
 
-<div class="gaoshou" style="margin-top: 85px;">
-    <div class="GS_box" style="display: block;">
-        <ul class="GS_nav">
-            <li class="current"><a href="javascript:;">重庆时时彩</a></li>
-            <li><a href="javascript:;">北京赛车</a></li>
-            <li><a href="javascript:;">广东11选5</a></li>
-            <li><a href="javascript:;">安徽11选5</a></li>
-            <li><a href="javascript:;">北京11选5</a></li>
-            <li><a href="javascript:;">福建11选5</a></li>
-            <li><a href="javascript:;">幸运农场</a></li>
-            <li><a href="javascript:;">广东快乐十分</a></li>
-            <li><a href="javascript:;">幸运农场</a></li>
-            <li><a href="javascript:;">安徽快三</a></li>
-            <li><a href="javascript:;">四川快乐十二</a></li>
-            <div style="clear: both;"></div>
-        </ul>
-        <ul class="GS_nav" style="display: none;">
-            <li class="current"><a href="javascript:;">福彩3D</a></li>
-            <li><a href="javascript:;">双色球</a></li>
-            <li><a href="javascript:;">七星彩</a></li>
-            <li><a href="javascript:;">大乐透</a></li>
-            <li><a href="javascript:;">六合彩</a></li>
-            <li><a href="javascript:;">排列3</a></li>
-            <li><a href="javascript:;">排列5</a></li>
-            <li><a href="javascript:;">七乐彩</a></li>
-            <div style="clear: both;"></div>
-        </ul>
+                        @foreach (var item in goupList)
+                        {
+                            if (item.Id == Model.Id)
+                            {
+                                <li class="current"><a href="/List/Expert/@item.Id">@item.Name</a></li>
+                            }
+                            else
+                            {
+                                <li><a href="/List/Expert/@item.Id">@item.Name</a></li>
+                            }
+                        }
+
+                        <div style="clear: both;"></div>
+                    </ul>
+                }
+            }
+        </div>
+        <a href="javascript:;" class="GS_btn"><img src="/images/50.png"/></a>
     </div>
-    <a href="javascript:;" class="GS_btn"><img src="/images/50.png"></a>
-</div>
 
-    <div class="guessing_header">
-        <ul class="C8_nav2 C8_bang">
+    <ul class="C8_nav6 C8_bang">
             <li class="current">
                 <a href="javascript:;">
                     <p>日榜</p><span></span>
@@ -116,178 +129,10 @@
                     <p>总榜</p><span></span>
                 </a>
             </li>
-            <div style="clear:both;"></div>
+            <div style="clear: both;"></div>
         </ul>
-    </div>
-    <div class="Ranking_content mt10">
-        <div class="Ranking_Cinfo">
-            <table width="100%" border="0" class="Ranking_table1">
-                <tbody>
-                    <tr>
-                        <td width="10%" align="center" valign="middle"><img src="/images/44_1.png" class="Ranking_Btu"></td>
-                        <td width="15%" align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_5.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p class="Ysfont"><a href="javascript:;">茶之轨迹</a></p>
-                        </td>
-                        <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle"><img src="/images/44_2.png" class="Ranking_Btu"></td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_6.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p class="Ysfont"><a href="javascript:;">linyuelong</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle"><img src="/images/44_3.png" class="Ranking_Btu"></td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p class="Ysfont"><a href="javascript:;">我很好那么你呢</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>4</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>5</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>6</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>7</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>8</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>9</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>10</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>11</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p><a href="javascript:;">卡桑德拉</a></p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
 
-    <div class="Ranking_footer">
-        <dl class="Rank_ftDL">
-            <dt><a href="javascript:;"><img src="/images/44_7.png"></a></dt>
-            <dd>
-                <p class="Ds_money1 Jf_money1 f-r">20000</p>
-                <div class="Rank_ftL">
-                    <h3><a href="javascript:;">一只安静的哈士奇</a></h3>
-                    <P>当前排名：<span>未上榜</span></P>
-                </div>
-            </dd>
-        </dl>
-    </div>
+    @Html.Action("ExpertData", new { id = @Model.Id })
 
 
 </body>
