--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Shared/Footer.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Shared/Footer.cshtml
@@ -1,8 +1,12 @@
 ﻿<footer class="hjc_footer" style="margin-top: -5px; background: #eee;">
+    <div class="hjc_ftNav hjc_adlink">
+        <a href="javascript:;">首页</a>
+        |<a href="javascript:;">广告合作</a>
+        |<a href="javascript:;">用户反馈</a>
+        |<a href="javascript:scrollTo(0,0);">回顶部</a>
+    </div>
     <div class="hjc_ftNav">
-        <p>深圳市球讯网络科技有限公司</p>
-        <p>版权所有 粤ICP备14066812号-1</p>
-        <p>本站仅提供国家彩票开奖信息查询，不提供任何彩票销售业务。</p>
-        <p>万彩吧提醒您：理性购彩，热心公益。未满18周岁的未成年人禁止购彩及兑奖！</p>
+        <p>© 2014-2018 球讯科技版权所有  粤IC备14066812号-1</p>
+        <p>声明：本站不提供任何彩票销售服务</p>
     </div>
 </footer>
