--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8510,7 +8510,17 @@ footer {
 }
 /**** Added by LHS 2018-4-10 END****/
 
-
+/**** Added by LHS 2018-4-13 ****/
+.hjc_ftNav a {
+    color: #666;
+}
+.hjc_ftNav p {
+    margin: 6px 0;
+}
+.hjc_adlink {
+    margin-bottom: 13px;
+}
+/**** Added by LHS 2018-4-13 END****/
 
 /**兼容小屏**/
 
