--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -111,7 +111,7 @@
             </li>
             <li>
                 <div class="UL2_hd">
-                    <a href="javascript:;">
+                    <a href="/List/Gratuity">
                         <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_06.png"></div>
                         <div class="UL2_hdtit">
                             <h3>打赏榜</h3>
