--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -94,7 +94,7 @@
             </li>
             <li>
                 <div class="UL2_hd">
-                    <a href="javascript:;">
+                    <a href="/List/Profit">
                         <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_05.png"></div>
                         <div class="UL2_hdtit">
                             <h3>盈利榜</h3>
